Account service using Feign client to talk to bank service
Change-Id: Iff716908534d732d5930e087d165433b0a965837

--- a/account-service/src/main/resources/application.properties
+++ b/account-service/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 server.port=7070
+spring.application.name=account-service
 
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
 eureka.client.serviceUrl.defaultZone=http://localhost:8020/eureka
-spring.cloud.config.name=account-service
-spring.cloud.config.discovery.service-id=config
-spring.cloud.config.discovery.enabled=true
 
 # Logging level
 logging.level.za.co.account=DEBUG
