--- a/bank-service/src/main/resources/application.properties
+++ b/bank-service/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+spring.application.name=bank-service
+server.port=7071
+
+eureka.client.region = default
+eureka.client.registryFetchIntervalSeconds = 5
+eureka.client.serviceUrl.defaultZone=http://localhost:8020/eureka
+
 # Logging level
 logging.level.za.co.bank=DEBUG
 logging.level.org.springframework.web=DEBUG
