--- a/account-service/src/main/resources/bootstrap.properties
+++ b/account-service/src/main/resources/bootstrap.properties
@@ -1,1 +1,6 @@
-spring.application.name=account-service
+spring.cloud.config.name=account-service
+spring.cloud.config.discovery.service-id=config
+spring.cloud.config.discovery.enabled=true
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8020/eureka
+
