--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.application.name=config
+server.port=8081
+
 spring.cloud.config.server.git.uri=file://${user.home}/application-config
 
 eureka.client.region = default
