--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port=8020
+
+eureka.instance.hostname=localhost
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8020/eureka
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
