--- a/zuul-service/src/main/resources/application.properties
+++ b/zuul-service/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=api-gateway
+server.port=8079
+
+eureka.client.region = default
+eureka.client.registryFetchIntervalSeconds = 5
+eureka.client.serviceUrl.defaultZone=http://localhost:8020/eureka
+
+zuul.routes.account-service.path=/account-service/**
+zuul.routes.account-service.sensitive-headers=Set-Cookie,Authorization
+hystrix.command.book-service.execution.isolation.thread.timeoutInMilliseconds=600000
+
+zuul.routes.bank-service.path=/bank-service/**
+zuul.routes.bank-service.sensitive-headers=Set-Cookie,Authorization
+hystrix.command.rating-service.execution.isolation.thread.timeoutInMilliseconds=600000
+
+zuul.routes.discovery.path=/discovery/**
+zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
+zuul.routes.discovery.url=http://localhost:8020
+hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
