Added monitoring - Spring boot admin
Change-Id: I6ebf1894cee7ad840fedb2fff194ac4378ad7107

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>config-server</module>
         <module>discovery-service</module>
         <module>zuul-service</module>
+        <module>spring-boot-admin</module>
     </modules>
 
 </project>
