--- a/account-service/src/main/resources/bootstrap.properties
+++ b/account-service/src/main/resources/bootstrap.properties
@@ -4,3 +4,7 @@ spring.cloud.config.discovery.enabled=true
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8020/eureka
 
+spring.boot.admin.url=http://localhost:8093
+spring.boot.admin.username=admin
+spring.boot.admin.password=admin
+
