--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 spring.application.name=config
 server.port=8081
 
+spring.profiles.active=native
 spring.cloud.config.server.git.uri=file://${user.home}/application-config
 
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
 eureka.client.serviceUrl.defaultZone=http://localhost:8020/eureka/
+
+spring.boot.admin.url=http://localhost:8093
+spring.boot.admin.username=admin
+spring.boot.admin.password=admin
+
+
+management.security.enabled=false
