--- a/zuul-service/src/main/resources/bootstrap.properties
+++ b/zuul-service/src/main/resources/bootstrap.properties
@@ -1,3 +1,7 @@
 spring.cloud.config.name=config
 spring.cloud.config.discovery.service-id=config
 spring.cloud.config.discovery.enabled=true
+
+spring.boot.admin.url=http://localhost:8093
+spring.boot.admin.username=admin
+spring.boot.admin.password=admin
