--- a/account-service/pom.xml
+++ b/account-service/pom.xml
@@ -14,7 +14,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.2.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
 
     <properties>
@@ -66,7 +66,8 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-hystrix-dashboard</artifactId>
         </dependency>
-        <!-- Hystrix Dashboard -->
+
+        <!-- Spring boot admin Monitoring Dashboard -->
 
         <dependency>
             <groupId>de.codecentric</groupId>
