--- a/account-service/src/main/resources/bootstrap.properties
+++ b/account-service/src/main/resources/bootstrap.properties
@@ -1,4 +1,6 @@
 spring.cloud.config.name=account-service
+
+spring.cloud.config.uri=http://localhost:8081
 spring.cloud.config.discovery.service-id=config
 spring.cloud.config.discovery.enabled=true
 
@@ -7,4 +9,3 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8020/eureka
 spring.boot.admin.url=http://localhost:8093
 spring.boot.admin.username=admin
 spring.boot.admin.password=admin
-
