--- a/bank-service/src/main/resources/bootstrap.properties
+++ b/bank-service/src/main/resources/bootstrap.properties
@@ -1,8 +1,10 @@
 spring.cloud.config.name=bank-service
-spring.cloud.config.discovery.service-id=config
-spring.cloud.config.discovery.enabled=true
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8020/eureka
+
+spring.cloud.config.uri=http://localhost:8081
+spring.cloud.config.discovery.service-id=config
+spring.cloud.config.discovery.enabled=true
 
 spring.boot.admin.url=http://localhost:8093
 spring.boot.admin.username=admin
