--- a/discovery-service/src/main/resources/bootstrap.properties
+++ b/discovery-service/src/main/resources/bootstrap.properties
@@ -1,3 +1,9 @@
 spring.application.name=discovery-service
 spring.cloud.config.name=discovery
+
+server.port=8020
+eureka.instance.hostname=localhost
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+
 spring.cloud.config.uri=http://localhost:8081
