--- a/zuul-service/src/main/resources/bootstrap.properties
+++ b/zuul-service/src/main/resources/bootstrap.properties
@@ -1,6 +1,10 @@
-spring.cloud.config.name=config
+spring.cloud.config.uri=http://localhost:8081
 spring.cloud.config.discovery.service-id=config
 spring.cloud.config.discovery.enabled=true
+
+eureka.client.region = default
+eureka.client.registryFetchIntervalSeconds = 5
+eureka.client.serviceUrl.defaultZone=http://localhost:8020/eureka
 
 spring.boot.admin.url=http://localhost:8093
 spring.boot.admin.username=admin
